--- a/css/styles.css
+++ b/css/styles.css
@@ -13,10 +13,10 @@ body{
     position: absolute;
 }
 .logo{
-    position:relative;
+    position:absolute;
     left:-350px;
     top:30px;
-    width: 70px;
+    width: 80px;
 }
 .hori-line{
     position: relative;
@@ -112,4 +112,64 @@ body{
     position: relative;
     top:-20px;
     left:20px
+}
+i{
+    visibility: hidden;
+}
+@media screen and (max-width: 768px) {
+    .nav-items{
+        display: none;
+    }
+    i.fas.fa-bars {
+        display: block;
+        visibility: visible;
+      margin-left: 200px;
+       margin-top: 30px;
+        font-size: 25px;
+    }
+    .content-container{
+        margin-right: 50px;
+        top: 0px; 
+    }
+    .logo{
+        margin-left: 150px;
+    }
+    .creative-font{
+        width:250px;
+        position: absolute;
+    }
+    .ingredient{
+        margin-top: 240px;
+        position: absolute;
+       margin-left: 100px;
+    }
+    .quotes{
+        width: 10px;
+        margin-left: 0px;
+    }
+    .dance{
+        margin-left: 0em;
+    }
+    .down-arrow{
+        width: 50px;
+        height: 100px;
+        position: relative;
+        top:-20px;
+    }
+    .social-icons{
+        margin-top: 500px;
+ margin-left: 200px;
+    }
+    .package{
+        padding: 10px 20px;
+        left: 133px;
+        right: 160px;
+        top: 400px;
+    }
+    .lady{
+       height: 500px;
+    }
+  .content-container{
+    position: relative;
+  }
 }
